--- a/local/certificacion_pse/index.html
+++ b/local/certificacion_pse/index.html
@@ -299,6 +299,72 @@
                     </div>
                 </div>
 
+                <div class="container px-4">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Comercio Agregador Preprod Split (Preproduccion)</h6>
+                                <span class="badge bg-secondary">ID: 28750</span>
+                                <span class="badge bg-secondary">PublicKey: a9cad5b6911b2406e84d49a239b93d0d</span>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Testing</h6>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('a9cad5b6911b2406e84d49a239b93d0d', 'true', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('a9cad5b6911b2406e84d49a239b93d0d', 'true','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Produccion</h6>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('a9cad5b6911b2406e84d49a239b93d0d', 'false', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('a9cad5b6911b2406e84d49a239b93d0d', 'false','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container px-4">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Comercio Agregador Preprod Split (Testing)</h6>
+                                <span class="badge bg-secondary">ID: 28750</span>
+                                <span class="badge bg-secondary">PublicKey: 2f48ea347518e2f96a6592f6a07ee4dd</span>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Testing</h6>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('2f48ea347518e2f96a6592f6a07ee4dd', 'true', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('2f48ea347518e2f96a6592f6a07ee4dd', 'true','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Produccion</h6>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('2f48ea347518e2f96a6592f6a07ee4dd', 'false', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('2f48ea347518e2f96a6592f6a07ee4dd', 'false','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
         </div>
