--- a/produccion/certificacion_pse/index.html
+++ b/produccion/certificacion_pse/index.html
@@ -190,6 +190,41 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="container px-4">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Comercio Agregador XX</h6>
+                                <span class="badge bg-secondary">ID: --</span>
+                                <span class="badge bg-secondary">PublicKey: 11271d7637ecdd50b565997c5fa41699</span>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Testing</h6>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('11271d7637ecdd50b565997c5fa41699', 'true', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('11271d7637ecdd50b565997c5fa41699', 'true','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Produccion</h6>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('11271d7637ecdd50b565997c5fa41699', 'false', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('11271d7637ecdd50b565997c5fa41699', 'false','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                
             </div>
         </div>
 
