--- a/testing/split_pse/index.html
+++ b/testing/split_pse/index.html
@@ -25,6 +25,10 @@
                         <strong>Ambiente Checkout: </strong>Testing => <a href="https://epayco-checkout-testing.s3.amazonaws.com/checkout.testing.js" target="_blank">https://epayco-checkout-testing.s3.amazonaws.com/checkout.testing.js</a>
                         <br>
                         <strong>Base de datos: </strong>Testing
+
+                        <h3>Pruebas en local</h3>
+                        <pre>https://juanhurtadopayco.github.io/test_payments/local/certificacion_pse/checkout.js</pre>
+                        
                     </div>
                 </div>
 
